# Materials-Project-natural-lang-explorer

./: .gitignore  PLANNING.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
mp_explorer/: config.py  main.py
mp_explorer/llm/: gemini_client.py
mp_explorer/tools/: base.py  magnetic.py
tools/: __init__.py  base.py  discovery.py  electronic.py  magnetic.py  structure.py  surfaces.py  thermodynamics.py
